base/src/test/resources/failure/cubical/dim-mismatch.aya.txt
In file $FILE:9:5 ->

  7 | def cmp {A : Type} (x : A)
  8 |   : [| i j |] (Partial A {j 0}) {| i 0 := p1 A x j |}
  9 |   => \i => p2 A x i
           ^------------^

Error: This path lambda expects 2 parameters, but it has only 1

1 error(s), 0 warning(s).
What are you doing?
